# nhgri_archive

./: .gitignore  README.md  start_here.ipynb
entity_recognition/: README.md  create_entity_recognition_datasets.ipynb  entity_recognition.cfg  evaluate_models.ipynb  image_and_text_entity_recognition.cfg  requirements.txt  train.cfg  train.sh
figure_1/: Doc2Vec_TSNE_training.ipynb  Doc2Vec_remove_stopwords.ipynb  README.md  circle_of_stats.ipynb  date_extraction.ipynb  requirements.txt
src/: kb.py  (+3 more)
tiramisu/: LICENSE  README.md  pyproject.toml  setup.py
tiramisu/core/: .env  docker-compose_aarch64.yaml  docker-compose_x86_64.yaml  tiramisu.env
tiramisu/core/digest/: .dockerignore  Dockerfile  main.py  requirements.txt
tiramisu/core/digest/tasks/: convert.py  initial.py
tiramisu/core/frontend/: package.json
tiramisu/core/frontend/public/: index.html
tiramisu/core/frontend/src/: App.css  App.tsx  actionTable.tsx  actionTableData.tsx  checkboxes.tsx  postData.ts  sortableTableHeader.tsx
tiramisu/core/labelstudio/: .dockerignore  Dockerfile  main.py  requirements.txt
tiramisu/core/labelstudio/tasks/: utils.py
tiramisu/core/neo4j_tasks/: .dockerignore  Dockerfile  main.py  requirements.txt
tiramisu/core/neo4j_tasks/tasks/: graphApp.py  update.py
tiramisu/core/nginx/conf.d/: nginx.conf
tiramisu/core/rust/: Cargo.toml
tiramisu/core/rust/src/: lib.rs
tiramisu/core/src/: .dockerignore  Dockerfile  requirements.txt
tiramisu/core/src/tiramisu/: _gitignore_template  flask.py  internal.py  utils.py  worker.py
tiramisu/core/tika/: tika_config.xml
(+49 files in other folders)
