[project]
name = "tiramisu"
version = "0.1.0"
description = "Tiramisu platform utility module"
authors = [
    {name = "Spencer Hong", email="spencerhong@u.northwestern.edu"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">3.9"

keywords = ["tiramisu"]

classifiers = [
    "Topic :: Software Development"
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["core/src/requirements.txt"]}

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"