[package]
name = "digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tiramisu_digest"
crate-type = ["cdylib"]

[dependencies]
jwalk = "0.6.0"
maplit = "1.0.2"
sha256 = "1.0.3"
hex = "0.4.3"
csv = "1.1.6"
infer = "0.3"
crc32fast = "1.3.2"
pyo3 = { version = "0.17.2", features = ["extension-module"] }